platform-manifests/istio-routing/flask-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: flaskapp-vs
  namespace: default
spec:
  hosts:
  - "myflaskapp.local" # Must match the domain defined in the Gateway
  gateways:
  - flaskapp-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: flaskapp-service.default.svc.cluster.local
        port:
          number: 80
